Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-6675

ntuser: mm: Assertion 'Base' failed at ..\..\ntoskrnl\mm\ARM3\section.c line 1041 after ARM3\section.c:386) Out of system view space

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • None
    • Win32SS
    • 57,330

    Description

      The user32:desktop and user32:winstation tests cause an assertion since 57330. They run "Out of system view space":

      (../../ntoskrnl/mm/ARM3/section.c:386) Out of system view space
      Assertion 'Base' failed at ../../ntoskrnl/mm/ARM3/section.c line 1041
      
      Entered debugger on embedded INT3 at 0x0008:0x8092582e.
      kdb:> bt
      Eip:
      <NTOSKRNL.EXE:12582f (../../lib/rtl/i386/debug_asm.S:35 (_DbgBreakPoint@0))>
      Frames:
      <NTOSKRNL.EXE:b773f (../../ntoskrnl/mm/ARM3/section.c:1041 (MiMapViewInSystemSpace@16))>
      <NTOSKRNL.EXE:b78ee (../../ntoskrnl/mm/ARM3/section.c:2655 (MmMapViewInSessionSpace@12))>
      <win32k.sys:148c8 (../../win32ss/user/ntuser/misc/usrheap.c:201 (UserCreateHeap))>
      <win32k.sys:359e1 (../../include/ddk/wdm.h:0 (UserDestroyThreadInfo@4))>
      <NTOSKRNL.EXE:11100e (../../ntoskrnl/ke/i386/traphdlr.c:1629 (@KiFastCallEntryHandler@8))>
      <NTOSKRNL.EXE:10ebfd (../../ntoskrnl/ke/i386/trap.s:150 (_KiFastCallEntry))>
      <ntdll.dll:b065>
      <user32_apitest.exe:84f2>
      <user32_apitest.exe:8869>
      <user32_apitest.exe:8aac>
      <user32_apitest.exe:134e1>
      <user32_apitest.exe:136f8>
      <user32_apitest.exe:13fb3>
      <user32_apitest.exe:14015>
      <kernel32.dll:fa1d>
      <00000000>

      Testman comparison: http://reactos.org/testman/compare.php?ids=13587,13590,13594,13596
      Log file with both tests and backtraces: http://build.reactos.org:8010/builders/Windows_AMD64_1%20VBox-Test/builds/6628/steps/test/logs/stdio

      Attachments

        Activity

          People

            alex_ionescu Alex Ionescu
            ThFabba ThFabba
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: